<resources>
    <string name="app_name">My City</string>

    <string name="login_text">Welcome to MyCity!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_activity_connection_detector">ConnectionDetector</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="hello_world">Hello World!</string>
    <string name="login_button">Sign In</string>
    <string name="register_button">Sign Up</string>

    <string name="invia_segnalazione">Invia Segnalazione</string>
    <string name="mappa_segnalazione">Mappa</string>
    <string name="mie_segnalazioni">Le mie Segnalazioni</string>
    <string name="info">Info</string>
    <string name="logout">Logout</string>
    <string name="bottom">Impostazioni</string>
    <string name="aiuto">Aiuto</string>
    <string name="profile">Il mio profilo</string>
    <string name="title_activity_register">Registrazione su MyCity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title">Titolo</string>
    <string name="description">Descrizione</string>
    <string name="priority">Priorità</string>
    <string name="category">Categoria</string>

    <!-- Priority Array -->
    <string-array name="priority_array">
        <item>Nessuno</item>
        <item>Bassa</item>
        <item>Normale</item>
        <item>Critica</item>
    </string-array>

    <!-- Category Array -->
    <string-array name="category_array">
        <item>Gestione rifiuti</item>
        <item>Manutenzione ordinaria</item>
        <item>Segnaletica stradale</item>
        <item>Vandalismo</item>
        <item>Affissione abusiva</item>
        <item>Altro</item>
    </string-array>
    <string name="title_activity_notification_sub">NotificationSubActivity</string>
</resources>

